--- a/Alisya's forecast.ipynb
+++ b/Alisya's forecast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "416cfa31",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import yfinance as yf\n",
     "\n",
     "# reload utils to get the latest version of the functions\n",
     "import importlib\n",
@@ -19,16 +18,9 @@
     "\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression, Ridge, RidgeCV, Lasso\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from scipy import stats\n",
-    "\n",
     "\n",
     "import itertools\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.linear_model import RidgeCV, LassoCV, ElasticNetCV\n",
+    "from sklearn.linear_model import RidgeCV\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "from sklearn.preprocessing import StandardScaler\n",
